Fixed MAGETWO-9545: [Electron]: Tier price is not visible on product page

--- a/app/design/frontend/magento2/electron/css/styles.less
+++ b/app/design/frontend/magento2/electron/css/styles.less
@@ -4129,6 +4129,7 @@ select {
 
 .prices.tier {
     background: #9ba4ad;
+    color: @primary1;
     font-family: 'Open Sans', sans-serif;
     font-size: 14px;
     line-height: 16px;
